unpackaged/main/default/objects/SDO_SFS_Vehicle_Inspection__c/SDO_SFS_Vehicle_Inspection__c.object-meta.xml
<CustomObject>
    <description>What: Part of Field Service Demo for Vehicle Inspection.</description>
    <label>Vehicle Inspection</label>
    <nameField>
        <displayFormat>VI-{0000}</displayFormat>
        <label>Vehicle Inspection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>