unpackaged/main/default/objects/SDO_SFS_Vehicle_Inspection__c/fields/Confirm_All_Wipers_Working__c.field-meta.xml
<CustomField>
    <fullName>Confirm_All_Wipers_Working__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm All Wipers Working</label>
    <type>Checkbox</type>
</CustomField>