unpackaged/main/default/objects/SDO_SFS_Vehicle_Inspection__c/fields/Front_Passenger_Tyre_Depth__c.field-meta.xml
<CustomField>
    <fullName>Front_Passenger_Tyre_Depth__c</fullName>
    <label>Front Passenger Tire Depth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 mm</fullName>
            </value>
            <value>
                <fullName>2 - 5 mm</fullName>
            </value>
            <value>
                <fullName>&gt; 5 mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>