unpackaged/main/default/objects/SDO_SFS_Vehicle_Inspection__c/fields/Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Reading__c</fullName>
    <label>Odometer Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>