unpackaged/main/default/objects/SDO_SFS_Vehicle_Inspection__c/fields/Vehicle_Registration__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration__c</fullName>
    <label>Vehicle Registration</label>
    <length>12</length>
    <type>Text</type>
</CustomField>