unpackaged/main/default/objects/SDO_SFS_Vehicle_Inspection__c/listViews/Completed_Inspections.listView-meta.xml
<ListView>
    <fullName>Completed_Inspections</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Vehicle_Registration__c</columns>
    <columns>Odometer_Reading__c</columns>
    <filterScope>Everything</filterScope>
    <label>Completed Inspections</label>
</ListView>